# k3s

./: .gitignore  .k3sctl.example.yaml  .k3sctl.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: checks.yml  integration.yml  metadata.yml  release.yml
.k3sctl/runs/: 20260428T163235Z.json  20260428T165024Z.json
agents/k3sagent/: go.mod
agents/k3sagent/cmd/k3sagent/: main.go
agents/k3sagent/internal/metrics/: cpu_test.go
agents/pilotagent/: Dockerfile  go.mod
agents/pilotagent/cmd/pilotagent/: main.go
agents/pilotagent/internal/metrics/: cpu.go
agents/pilotagent/internal/server/: grpc.go
docker/test-target/: Dockerfile
docs/: agent-grpc.md  architecture.md  manifest.md  plan.md  release.md  testing-multipass.md
examples/: cilium-k3s.yaml  cilium-server.yaml  invalid-missing-connection.yaml  k3s-cilium.yaml  multipass-test.yaml  single-server.yaml  uninstall.yaml
proto/: k3smetrics.proto  pilotmetrics.proto
scripts/: check_metadata.py
tests/integration/: conftest.py  test_full_cycle.py
