[project]
name = "cluster-pilot"
version = "0.2.0"
description = "Declarative k3s machine reconciler workspace"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pilotcli",
]

[tool.uv.workspace]
members = [
    "packages/pilotplan",
    "packages/pilotremote",
    "packages/pilotcli",
]

[tool.uv.sources]
pilotplan = { workspace = true }
pilotremote = { workspace = true }
pilotcli = { workspace = true }

[dependency-groups]
dev = [
    "commitizen>=4.13.10",
    "mypy>=1.17.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.0",
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["packages"]
python_files = ["test_*.py", "*_test.py"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = [
    "packages/pilotplan/src",
    "packages/pilotremote/src",
    "packages/pilotcli/src",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.0"
tag_format = "v$version"
bump_message = "chore(release): v$current_version to v$new_version"
update_changelog_on_bump = true
major_version_zero = true
version_files = [
    "pyproject.toml:version",
    "packages/pilotplan/pyproject.toml:version",
    "packages/pilotremote/pyproject.toml:version",
    "packages/pilotcli/pyproject.toml:version",
]
